# python-project-49

./: .gitignore  Makefile  README.md  brain-calc.cast  brain-even.cast  brain-gcd.cast  brain-prime.cast  brain-progression.cast  demo.cast  demo1.cast  demo3.cast  demo4.cast  hello.py  pyproject.toml
brain_games/: cli.py
brain_games/games/: calc.py  cli.py  gcd.py  parity.py  prime.py  progression.py  sample.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
